# simox-cgal

./: .gitignore  CGALMesh.cpp  CGALMesh.h  CGALMeshConverter.cpp  CGALMeshConverter.h  CGALMeshIO.cpp  CGALMeshIO.h  CGALPolyhedronMesh.cpp  CGALPolyhedronMesh.h  CGALSkeleton.cpp  CGALSkeleton.h  CGALSurfaceMesh.cpp  CGALSurfaceMesh.h  CMakeLists.txt  ObjectPart.cpp  ObjectPart.h  README.md  SegmentedObject.cpp  SegmentedObject.h  SimoxCGAL.cpp  SimoxCGAL.h  SimoxCGALImportExport.h  readme.md
CMakeModules/: simox-cgalConfig.cmake
GraspPlanning/Skeleton/: ApproachMovementSkeleton.cpp  ApproachMovementSkeleton.h  DeciderGraspPreshape.cpp  DeciderGraspPreshape.h  PartAnalysis.h  SkeletonGraspPlanner.cpp  SkeletonGraspPlanner.h  SkeletonVertexAnalyzer.cpp  SkeletonVertexAnalyzer.h
IO/: SegmentedObjectIO.cpp  SegmentedObjectIO.h  SkeletonIO.cpp  SkeletonIO.h
MeshProcessing/: MeshReconstruction.cpp  MeshReconstruction.h
Segmentation/SDF/: MeshSDF.cpp  MeshSDF.h
Segmentation/Skeleton/: MeshSkeleton.cpp  MeshSkeleton.h  MeshSkeletonData.cpp  MeshSkeletonData.h  SkeletonPart.cpp  SkeletonPart.h  SkeletonPoint.h  Subpart.cpp  Subpart.h
Tools/: CMakeLists.txt
Tools/MeshReconstruction/: CMakeLists.txt  MeshReconstruction.cpp  MeshReconstruction.ui  MeshReconstructionWindow.cpp  MeshReconstructionWindow.h
Tools/ObjectSegmentationSDF/: CMakeLists.txt  SegmentObjectSDF.cpp  SegmentObjectSDF.ui  SegmentObjectSDFWindow.cpp  SegmentObjectSDFWindow.h
Tools/ObjectSegmentationSkeleton/: CMakeLists.txt  ObjectSegmentationSkeleton.cpp  ObjectSegmentationSkeleton.ui  ObjectSegmentationSkeletonWindow.cpp  ObjectSegmentationSkeletonWindow.h
Tools/SegmentObjectSDF/: CMakeLists.txt  SegmentObjectSDF.cpp  SegmentObjectSDF.ui  SegmentObjectSDFWindow.cpp  SegmentObjectSDFWindow.h
Tools/SegmentedObjectViewer/: CMakeLists.txt  SegmentedObjectViewer.cpp  SegmentedObjectViewer.ui  SegmentedObjectViewerWindow.cpp  SegmentedObjectViewerWindow.h
Tools/SkeletonGraspPlaner/: CMakeLists.txt  SkeletonGraspPlaner.cpp  SkeletonGraspPlaner.ui  SkeletonGraspPlanerViewerIO.cpp  SkeletonGraspPlanerViewerIO.h  SkeletonGraspPlanerWindow.cpp  SkeletonGraspPlanerWindow.h
Tools/SkeletonGraspPlaner/GraspPlaner/: ApproachMovementSkeleton.cpp  ApproachMovementSkeleton.h  DeciderGraspPreshape.cpp  DeciderGraspPreshape.h  Math.cpp  Math.h  PartAnalysis.cpp  PartAnalysis.h  SkeletonGraspPlaner.cpp  SkeletonGraspPlaner.h  SkeletonVertexAnalyzer.cpp  SkeletonVertexAnalyzer.h
Tools/SkeletonGraspPlanner/: CMakeLists.txt  SkeletonGraspPlanner.cpp  SkeletonGraspPlanner.ui  SkeletonGraspPlannerOptions.ui  SkeletonGraspPlannerWindow.cpp  SkeletonGraspPlannerWindow.h
Tools/SkeletonViewer/: CMakeLists.txt  SkeletonPolyhedron.cpp  SkeletonPolyhedron.h  SkeletonViewer.cpp  SkeletonViewer.ui  SkeletonViewerWindow.cpp  SkeletonViewerWindow.h  SkeletonViewerWindowIO.cpp  SkeletonVisualization.cpp  SkeletonVisualization.h
Tools/SkeletonViewer/IO/: SkeletonIO.cpp  SkeletonIO.h
Visualization/CoinVisualization/: CGALCoinVisualization.cpp  CGALCoinVisualization.h
data/evaluation/SecondHands/: AllanKey5  Brush  Cutter  Flashlight  Mallet  Phillips  Pliers  Slotted_Screwdriver  Spraybottle  Stanley_Extension_Medium  Stanley_Extenstion_Long  Stanley_Extenstion_Short  Stanley_Handle  Stanley_Lever
data/evaluation/ycb/: black_and_decker_lithium_drill_driver  black_and_decker_lithium_drill_driver_unboxed  blank_hard_plastic_card  block_of_wood_12in  block_of_wood_6in  blue_wood_block_1inx1in  brine_mini_soccer_ball  campbells_condensed_tomato_soup  champion_sports_official_softball  cheerios_14oz  cheeze-it_388g  clorox_disinfecting_wipes_35  comet_lemon_fresh_bleach  dark_red_foam_block_with_three_holes  domino_sugar_1lb  expo_black_dry_erase_marker  expo_black_dry_erase_marker_fine  frenchs_classic_yellow_mustard_14oz  jell-o_chocolate_flavor_pudding  jell-o_strawberry_gelatin_dessert  large_black_spring_clamp  medium_black_spring_clamp  melissa_doug_farm_fresh_fruit_apple  melissa_doug_farm_fresh_fruit_banana  melissa_doug_farm_fresh_fruit_lemon  melissa_doug_farm_fresh_fruit_peach  melissa_doug_farm_fresh_fruit_pear  melissa_doug_farm_fresh_fruit_plum  melissa_doug_farm_fresh_fruit_strawberry  morton_salt_shaker  moutain_security_steel_shackle  orange_wood_block_1inx1in  penn_raquet_ball  play_go_rainbow_stakin_cups_10_blue  play_go_rainbow_stakin_cups_1_yellow  play_go_rainbow_stakin_cups_2_orange  play_go_rainbow_stakin_cups_3_red  play_go_rainbow_stakin_cups_5_green  play_go_rainbow_stakin_cups_6_purple  play_go_rainbow_stakin_cups_7_yellow  (+30 more)
data/objects/SecondHands/: flashlight-reconstructed.stl  flashlight-reconstructed.xml
data/objects/airplane/: airplane0.xml  airplane12.xml  airplane3.xml  airplane5.xml  airplane7.xml  airplane8.xml
data/objects/bottle/: bottle10.xml  bottle12.xml  bottle14.xml  bottle16.xml  bottle18.xml  bottle19.xml  bottle23.xml  bottle25.xml  bottle27.xml  bottle3-eval.txt  bottle3-grasps.xml  bottle30.xml  bottle34.xml  bottle35.xml  bottle40.xml  bottle42.xml  bottle45.xml  bottle47.xml  bottle49.xml  bottle52.xml  bottle54.xml  bottle6.xml  bottle60.xml  bottle61.xml
data/objects/flashlight/: flashlight1-eval.txt  flashlight1-grasps.xml  flashlight1.xml  flashlight10.xml  flashlight11.xml  flashlight3.xml  flashlight4.xml  flashlight6.xml
data/objects/hammer/: hammer10.xml  hammer15.xml  hammer2.xml  hammer23.xml  hammer25.xml  hammer3.xml  hammer8.xml
data/objects/plier/: plier0.xml  plier10.xml  plier11.xml  plier13.xml  plier14.xml  plier17.xml  plier2.xml  plier5.xml  plier8.xml
data/objects/screwdriver/: screwdriver01.xml  screwdriver02.xml  screwdriver03.xml  screwdriver04.xml  screwdriver05.xml  screwdriver06.xml  screwdriver07.xml  screwdriver08.xml  screwdriver10.xml  screwdriver11.xml  screwdriver13.xml  screwdriver14.xml  screwdriver16.xml  screwdriver17.xml  screwdriver18.xml
data/objects/spraybottle/: sprayBottle0-eval.txt  sprayBottle0-grasps.xml  (+2 more)
tests/: CMakeLists.txt  SimoxCGALMeshTest.cpp  SimoxCGALPolyhedronMeshTest.cpp  SimoxCGALSurfaceMeshTest.cpp
(+1229 files in other folders)
